# rust-ocr

./: .gitignore  Cargo.toml  LICENSE  README.md
