[package]
name = "rust-ocr"
version = "0.1.0"
edition = "2021"
authors = ["desiyonan"]
#description = "A Rust wrapper for Google Tesseract"
license = "MIT"
repository = "https://github.com/desiyonan/rust-ocr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
